Ajout liens github+linkedin ; corrections mineures texte + alignements

--- a/sites/style.css
+++ b/sites/style.css
@@ -142,6 +142,12 @@ a{
     width:30%;
     margin-bottom:5%;
 }
+.page_contact figcaption{
+    width:10em;
+}
+.page_contact figure img{
+    margin-left:15%;
+}
 figure a:hover{
     font-size:32px;
 
@@ -205,7 +211,9 @@ figure a:hover{
        
 }
 
-
+.page_realisations{
+        height:2300px;
+}
 .page_realisations h1{
     margin-top:2%;
     margin-bottom:2%;
